--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Happy Birthday!!! :)</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
-  <link rel="shortcut icon" type="./image/png" href="./img/favicon.png" />
+  <link rel="shortcut icon" type="./image/png" href="./img/flowers.png" />
   <link rel="stylesheet" href="./style/main.css" />
 </head>
 
