--- a/index.html
+++ b/index.html
@@ -1,154 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+<meta charset='UTF-8' />
+<meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5'
+  name='viewport' />
+<meta content='IE=edge' http-equiv='X-UA-Compatible' />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
+<link href="https://feeldreams.github.io/pesanbuatmu/style.css" rel="stylesheet" type="text/css" />
+<script src="https://pesanbuatmu.feeldream.repl.co/script.js"></script>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! :)</title>
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
-  <link rel="shortcut icon" type="./image/png" href="./img/flowers.png" />
-  <link rel="stylesheet" href="./style/main.css" />
+  <title>Happy Birthday Bunda</title>
 </head>
+<style>
+  :root {
+    --warna-bg: rgba(0, 0, 0, .75);
+    --warna-teks: white;
+    --warna-bingkai: rgba(255, 255, 255, .8);
+    --bingkai: 10px;
+    --gaya-font: 'Ubuntu', sans-serif;
+  }
+</style>
 
 <body>
 
-  <audio class="song" loop autoplay>
-    <source src="./music/hbd.mpeg">
-    </source>
-    Your browser isn't invited for super fun audio time.
-  </audio>
-
-  <div class="container">
-    <div class="one">
-      <h1 class="one">
-        Hi "Anggi"
-        <span id="name"></span>
-      </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
-    </div>
-
-    <div class="three">
-      <p>It's your birthday!! ♥️🥳</p>
-    </div>
-
-    <div class="four">
-      <div class="text-box">
-        <p class="hbd-chatbox">
-          selamat ulang tahun, semoga yg di inginkan tercapai, kalau bingung mau jadi apa jadi masa depan ku juga boleh.
-        </p>
-        <p class="fake-btn">Send</p>
-      </div>
-    </div>
-
-    <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">
-        I realised, I wanted to do something<br>
-        <strong>special</strong>
-        .
-      </p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">
-        You are Special
-        <span>:)</span>
-      </p>
-      <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
-      </p>
-    </div>
-
-    <div class="six">
-      <img src="./img/Ilustrasi.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-      <img src="img/hat.svg" alt="hat" class="hat" />
-      <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the happiness always be with you! ;)</h5>
-      </div>
-    </div>
-
-    <div class="seven">
-      <div class="baloons">
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon2.svg" alt="" />
-        <img src="img/ballon1.svg" alt="" />
-        <img src="img/ballon3.svg" alt="" />
-      </div>
-    </div>
-
-    <div class="eight">
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-    </div>
-
-    <div class="nine">
-      <p>Aku ada hadiah spesial buat kamu!!</p>
-      <p><a href="flower.html">Klik disini<a></p>
-    </div>
+  <div id="bodyblur">
+    <img
+      src="https://e1.pxfuel.com/desktop-wallpaper/154/414/desktop-wallpaper-backgrounds-pemandangan-alam-pemandangan.jpg" />
   </div>
 
+  <div id='Content'>
+
+    <div id="suratin" onClick="memulai()">
+      <img src="https://rayyscoding.github.io/envelope.png" />
+    </div>
+    <p id="ket">Klik Suratnya!</p>
+
+    <div><img src="https://media.tenor.com/bn2-TutT5kIAAAAj/peach-goma-spin.gif" id="fotoakhir" /></div>
+    <div>
+      <blockquote id='bq'>
+        <p id="kalimat"></p>
+        <p id="kalimatc"></p>
+      </blockquote>
+    </div>
+
+
+    <div id="Tombol">
+      <a onClick="sjawab()">
+        <b>Buka Kado</b>
+      </a>
+    </div>
+
+  </div>
+
+  <script>
+    function showDiv() { Content.style = "opacity:1;margin-top:15vh;"; ket.style = "margin-top:30px"; }
+    function memulai() { suratin.style = "transition:all 1s ease;transform:scale(.1);opacity:0"; ket.style = "transition:all 1s ease;transform:scale(.1);opacity:0"; setTimeout(pesan, 300) }
+    function kpemb() { suratin.style = "display:none"; ket.style = "display:none"; fotoakhir.style = "display:inline-flex;transform:scale(1);"; Content.style = "opacity:1;margin-top:2vh;"; bq.style = "opacity:1;visibility:visible;margin-top:5px"; setTimeout(ngetik, 500) }
+
+    function tombol() { Tombol.style = "margin-top:15px;opacity:1;transform: scale(1);"; ftom = 1; } ftom = 0; function fakhiran() { document.getElementById("akhiran").style = "display:inline-flex"; }
+    const swals = Swal.mixin({ allowOutsideClick: false, cancelButtonColor: '#FF0040', imageWidth: 100, imageHeight: 100, }); const swalst = Swal.mixin({ allowOutsideClick: false, showConfirmButton: false, timer: 2500, timerProgressBar: true, imageWidth: 100, imageHeight: 100, }); const style = document.createElement('style'); var today = new Date(); var dd = String(today.getDate()).padStart(2, '0'); var mm = String(today.getMonth() + 1).padStart(2, '0'); var yyyy = today.getFullYear(); const monthNames = ["Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November", "Desember"]; today = dd + ' ' + monthNames[today.getMonth()] + ' ' + yyyy;
+    function setel() { audio.play(); } function setel2() { bgm.play(); } function sjawab() { if (ftom == 1) { Tombol.style = "display:none"; jawab(); } }
+
+    var aa = 0, katangetik;
+    function ngetik() {
+      if (aa < katangetik.length) {
+        kalimat.innerHTML += katangetik.charAt(aa);
+        aa++;
+        setTimeout(ngetik, 80);
+      }
+      if (aa == katangetik.length) {
+        kalimatc.style = "margin-top:30px;margin-bottom:10px";
+        setTimeout(ngetik2, 500)
+      }
+    }
+    var ai = 0, katangetik2;
+    function ngetik2() {
+      if (ai < katangetik2.length) {
+        kalimatc.innerHTML += katangetik2.charAt(ai);
+        ai++;
+        setTimeout(ngetik2, 150);
+      }
+      if (ai == katangetik2.length) {
+        setTimeout(ngetik3, 500)
+      }
+    }
+    var au = 0, katangetik3;
+    function ngetik3() {
+      if (au < katangetik3.length) {
+        kalimatc.innerHTML += katangetik3.charAt(au);
+        au++;
+        setTimeout(ngetik3, 150);
+      }
+      if (au == katangetik3.length) {
+        kalimatc.style = "margin-top:30px;margin-bottom:10px";
+        setTimeout(tombol, 300)
+      }
+    }
+  </script>
+  <script type="text/javascript">
+    async function jawab() { await swals.fire('Mengalihkan ke halaman kado !'); window.location = "https://daffa-qiao.github.io/flower"; }
+
+    async function pertama() {
+      audio = new Audio('https://feeldreams.github.io/pesanbuatmu/angelbaby.mp3'); setTimeout(showDiv, 100);
+    } pertama();
+
+    async function pesan() {
+      await swalst.fire({
+        title: 'Hai Bunda 🥰',
+        imageUrl: 'https://i.ibb.co/4VBkZwn/bunga.gif',
+      });
+      await swalst.fire({
+        title: 'Selamat ulang tahun 🥳',
+        imageUrl: 'https://media1.tenor.com/m/2WbCZMGZEh8AAAAC/peach-and-goma-peachcat.gif',
+      });
+      await swalst.fire({
+        title: 'Jaga Kesehatannya',
+        imageUrl: 'https://media.tenor.com/85uCu_GxrxoAAAAi/peach-and-goma-peach-goma.gif',
+      });
+      await swalst.fire({
+        title: 'Jangan sampe sakit!',
+        imageUrl: 'https://i.ibb.co/hBJWz6S/tinju.gif',
+      });
+
+      katangetik = "Selamat ulang tahun untuk bunda tercinta! Semoga hari ini membawa kebahagiaan yang melimpah dan keberuntungan yang tak terhitung. Bunda adalah sumber inspirasi dan kekuatan bagi kami semua.";
+      katangetik2 = "Terima kasih telah menjadi bunda yang hebat!";
+      setTimeout(kpemb, 300);
+    }
+  </script>
 </body>
-  <!-- Greensock -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-  <!-- Sweetalert -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script type="application/javascript" src="script/main.js"></script>
 
 </html>
