--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <head>
   <title>Happy Birthday Bunda</title>
+  <link rel="shortcut icon" type="./image/png" href="./img/favicon.png">
 </head>
 <style>
   :root {
