--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         setTimeout(ngetik2, 150);
       }
       if (ai == katangetik2.length) {
-        setTimeout(ngetik3, 500)
+        setTimeout(tombol, 300)
       }
     }
     var au = 0, katangetik3;
