--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://pesanbuatmu.feeldream.repl.co/script.js"></script>
 
 <head>
-  <title>Happy Birthday Bunda</title>
+  <title>Untuk Uwin — Maaf dari Dapa</title>
   <link rel="shortcut icon" type="./image/png" href="./img/favicon.png">
 </head>
 <style>
@@ -49,7 +49,7 @@
 
     <div id="Tombol">
       <a onClick="sjawab()">
-        <b>Buka Kado</b>
+        <b>Baca Jawaban</b>
       </a>
     </div>
 
@@ -101,32 +101,32 @@
     }
   </script>
   <script type="text/javascript">
-    async function jawab() { await swals.fire('Mengalihkan ke halaman kado !'); window.location = "https://daffa-qiao.github.io/flower"; }
+    async function jawab() { await swals.fire('Mengalihkan ke halaman bunga untukmu 🌷'); window.location = "https://daffa-qiao.github.io/flower"; }
 
     async function pertama() {
-      audio = new Audio('https://feeldreams.github.io/pesanbuatmu/angelbaby.mp3'); setTimeout(showDiv, 100);
+      audio = new Audio('music/musik.mp3'); setTimeout(showDiv, 100);
     } pertama();
 
     async function pesan() {
       await swalst.fire({
-        title: 'Hai Bunda 🥰',
+        title: 'Hai Uwin 🌹',
         imageUrl: 'https://i.ibb.co/4VBkZwn/bunga.gif',
       });
       await swalst.fire({
-        title: 'Selamat ulang tahun 🥳',
+        title: 'Dapa minta maaf ya…',
         imageUrl: 'https://media1.tenor.com/m/2WbCZMGZEh8AAAAC/peach-and-goma-peachcat.gif',
       });
       await swalst.fire({
-        title: 'Jaga Kesehatannya',
+        title: 'Dapa sadar Dapa salah',
         imageUrl: 'https://media.tenor.com/85uCu_GxrxoAAAAi/peach-and-goma-peach-goma.gif',
       });
       await swalst.fire({
-        title: 'Jangan sampe sakit!',
+        title: 'Hati Dapa cuma untuk Uwin',
         imageUrl: 'https://i.ibb.co/hBJWz6S/tinju.gif',
       });
 
-      katangetik = "Selamat ulang tahun untuk bunda tercinta! Semoga hari ini membawa kebahagiaan yang melimpah dan keberuntungan yang tak terhitung. Bunda adalah sumber inspirasi dan kekuatan bagi kami semua.";
-      katangetik2 = "Terima kasih telah menjadi bunda yang hebat!";
+      katangetik = "Uwin, maafin Dapa ya. Dapa tahu Dapa belum sempurna dan kadang bikin Uwin kecewa. Tapi dari hati yang paling dalam, Dapa bener-bener menyesal. Dapa sayang sama Uwin, lebih dari yang bisa Dapa ucapin.";
+      katangetik2 = "Kalau Uwin siap, pelan‑pelan kita perbaiki semuanya. Dapa kedepannya bakal lebih peka, lebih sabar, dan lebih jujur. Terima kasih sudah jadi rumah paling hangat buat Dapa. Bolehkah Dapa memeluk maaf Uwin hari ini?";
       setTimeout(kpemb, 300);
     }
   </script>
