new valentine code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="message">
         <h2 id="success-message">Yepppie, see you sooonnn :3</h2>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./public/js/script.js"></script>
   </body>
 </html>
